--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "homepage": "https://github.com/SOLRAK77/platzigram#readme",
   "dependencies": {
     "express": "^4.15.3",
-    "materialize-css": "^0.99.0"
+    "materialize-css": "^0.99.0",
+    "pug": "^2.0.0-rc.2"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
